--- a/src/index.css
+++ b/src/index.css
@@ -55,6 +55,11 @@
   background-color: rgba(165, 206, 178, 0.6);
 }
 
+.shadow-3d {
+  box-shadow: 0px 4px 0px rgb(52, 11, 86), 4px 4px 0px rgb(52, 11, 86),
+    0 0 20px rgba(52, 11, 86, 0.6);
+}
+
 .div-3d-no-shadow {
   box-shadow: 0px 4px 0px rgb(52, 11, 86);
   border: 1px solid rgb(68, 172, 137);
