--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,21 @@
 #root {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  min-height: 100vh;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 }
 
 #page-container {
   margin: 0 auto;
+  width: 100%;
+  text-align: center;
+}
+
+.page-padded {
   padding: 1vw;
   width: 96%;
-  text-align: center;
+  margin: 0 auto;
 }
 
 .debug {
