--- a/src/page-main/PageMain.css
+++ b/src/page-main/PageMain.css
@@ -39,10 +39,9 @@ p {
   gap: 0px;
   flex-wrap: wrap;
   justify-content: center;
-  padding: 40px 20px;
+  padding: 40px 60px;
   background-color: #6affa899;
-  width: 100vw;
-  margin-left: -3vw;
+  box-sizing: border-box;
 }
 
 .random-oc-button-section {
