--- a/src/page-oc-list/OcGroup.css
+++ b/src/page-oc-list/OcGroup.css
@@ -7,12 +7,19 @@
 }
 
 .group-header {
-  display: block;
+  display: flex;
   align-items: center;
+  justify-content: center;
   margin: 0 auto;
-  padding: 0;
+  padding: 1rem 2rem;
   width: 100%;
   border: none;
+  cursor: pointer;
+}
+
+.group-header h2 {
+  margin: 0;
+  padding: 0;
 }
 
 .group-info {
