--- a/src/page-main/PageMain.css
+++ b/src/page-main/PageMain.css
@@ -120,5 +120,5 @@ p {
   margin-left: auto;
   margin-right: auto;
   border-radius: 6px;
-  background-color: var(--color-green);
+  background-color: var(--color-white-sparkle);
 }
